--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,11 @@
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
 # .idea/modules.xml
-# .idea/*.iml
+ .idea/*.iml
 # .idea/modules
 # *.iml
 # *.ipr
+.idea/DataStructures.iml
 
 
 # File-based project format
